[package]
name = "harbor"
version = "0.1.0"
edition = "2021"
authors = ["The Servo Project Developers"]
license = "MPL-2.0"
description = "Local desktop app framework - web frontends connecting to gunicorn/nginx over Unix sockets (Linux) or named pipes (Windows)"
repository = "https://github.com/marctjones/harbor"
keywords = ["servo", "desktop-app", "unix-socket", "named-pipe", "gunicorn", "nginx"]
categories = ["gui", "web-programming"]

[features]
default = ["unix"]
unix = []
named-pipe = []

[dependencies]
# Transport library
rigging = { git = "https://github.com/marctjones/rigging", default-features = false, features = ["unix"] }

# Configuration
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Process management
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["process", "signal"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_System_Pipes"] }
