[package]
name = "harbor"
version = "0.1.0"
edition = "2021"
authors = ["The Servo Project Developers"]
license = "MPL-2.0"
description = "Local desktop app framework - web frontends connecting to gunicorn/nginx over Unix sockets (Linux) or named pipes (Windows)"
repository = "https://github.com/marctjones/harbor"
keywords = ["servo", "desktop-app", "unix-socket", "named-pipe", "gunicorn", "nginx"]
categories = ["gui", "web-programming"]

[[bin]]
name = "harbor"
path = "src/main.rs"

[lib]
name = "harbor"
path = "src/lib.rs"

[features]
default = ["unix", "servo"]
unix = []
named-pipe = []
# Enable embedded Servo browser engine
# Disable with: cargo build --no-default-features --features unix
servo = []

[dependencies]
# Rigging provides the stable embedding API for Servo
# When the 'servo' feature is enabled, Rigging includes the browser engine
rigging = { path = "../rigging", features = ["unix", "tcp"] }

# Configuration
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# CLI
clap = { version = "4", features = ["derive"] }

# Signal handling
ctrlc = "3.4"

# Process management
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["process", "signal"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_System_Pipes"] }
